prevent overlappings, and make btns and profile clicable

--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -76,6 +76,7 @@ body {
   transition: color 0.5s ease-out;
 }
 #main{
+  padding: 0.5rem 0.5rem;
   overflow: hidden;
   transition: opacity 0.5s ease-in-out;
 }
@@ -83,5 +84,9 @@ body {
   opacity: 0;
 }
 .btn:hover , .nav-btn:hover{
+  cursor: pointer;
   background-color: rgba(128, 128, 128, 0.3);
+}
+.profile-pic{
+  cursor: pointer;
 }
